# Finance-Tool

./: .gitignore  Cargo.toml
api/: README.md
api/src/: account.rs  app.rs  catergorization.rs  database.rs  lib.rs  main.rs  transaction.rs  user.rs
src/: account.rs  app.rs  catergorization.rs  database.rs  lib.rs  main.rs  parser.rs  transaction.rs  user.rs
web-app/: Cargo.toml
web-app/src/: main.rs
web-app/src/components/: counter_btn.rs
