[package]
name = "finance-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
regex = "1.11.1"
rusqlite = "0.35.0"
tempfile = "3.20.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.5.0"
axum = "0.8.4"
dotenv = "0.15.0"
